syntax = "proto3";

package users;

service UserService {
    rpc Register (RegisterRequest) returns (UserResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc UpdateProfile (UpdateProfileRequest) returns (UserResponse);
    rpc VerifyEmail (VerifyEmailRequest) returns (UserResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    UserResponse user = 3;
}

message GetUserRequest {
    string id = 1;
}

message UpdateProfileRequest {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
}

message VerifyEmailRequest {
    string id = 1;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string user_id = 2;
    repeated string roles = 3;
}

message UserResponse {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    repeated string roles = 5;
    bool is_active = 6;
    bool is_email_verified = 7;
    string created_at = 8;
}